Большой коммит 06.09.2023, добавление API_Responses
