# server/controllers/TagController.ts
@@ -1,5 +1,7 @@
 import { Request, Response } from "express"
 import Tag from "../models/Tag";
+import { API_ErrorResponse, API_Response, KnownErrors, StatusCodes } from "../common/types/API_Responses";
+import { ReturnAPIResponse } from "../common/helpers/Responses";
 
 /** Контролер управления тегами */
 class TagController {
@@ -7,13 +9,21 @@ class TagController {
           try {
                
                const createdTag =  await Tag.create({ name: req.body.name, description: req.body.content, createdBy: req.body.description})
-
                console.log("Создан новый тэг: " + createdTag)
-               return res.status(200).json({message: "Создан новый тэг: " + createdTag})
+
+               return ReturnAPIResponse(res, new API_Response(
+                    StatusCodes.Success,
+                    createdTag,
+                    "Успешно создан новый тег: "
+               ));
                }
           catch (e) {
                console.log("Ошибка создания тэга: " + e)
-               return res.status(400).json({message: "Ошибка создания тэга: " + e})
+               return ReturnAPIResponse(res, new API_ErrorResponse(
+                    StatusCodes.InternalError,
+                    KnownErrors.InternalError,
+                    "ошибка создания тега: " + e
+               ));
           }
      }
 }
